# ai-orchestrator

./: .env  .env.example  .env.production  .env.template  .gitconfig  .gitignore  .wget-hsts  Dockerfile  README.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  fix_alembic.sh  install_orchestrator.sh  pyproject.toml  requirements.txt  setup_orchestrator.sh  yes  yes.pub
.github/workflows/: ci.yml
ai_orchestrator/: bot.py
backend/app/: celery_app.py  main.py  tasks.py
backend/app/api/: __init__.py  admin.py  analysis.py  auth.py  data_collection.py  digital_twin.py  users.py  vector_db.py
backend/app/config/: __init__.py  database.py  settings.py
backend/app/core/: __init__.py  rbac.py  security.py
backend/app/data_collection/: __init__.py
backend/app/digital_twin/: __init__.py
backend/app/models/: __init__.py  apikey.py  base.py  organization.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  apikey.py  organization.py  user.py
backend/app/services/: apikey.py  auth.py  organization.py  user.py
backend/app/vector_db/: __init__.py
backend/migrations/: env.py
backend/tests/: test_analysis_api.py  test_auth.py  test_digital_twin.py  test_digital_twin_style.py  test_edge_cases.py  test_parsers_and_nlp.py  test_privacy.py  test_vector_api.py  test_vector_api_mock.py  test_vector_db.py
helm/ai-orchestrator/: Chart.yaml  values.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
pydantic/: __init__.py
pydantic_settings/: __init__.py
scripts/: certbot.sh
(+47 files in other folders)
