[tool.poetry]
name = "ai-orchestrator"
version = "0.1.0"
description = "AI Agents Ecosystem Core Platform"
authors = ["Mikhail Singatullin <you@example.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-jose = {extras = ["cryptography"], version = "^3.3"}
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
redis = "^5.0"
fastapi-limiter = "^0.1.5"
sentence-transformers = "^5.0"
openai = "^1.30"
celery = "^5.3"
email-validator = "^2.0"
prometheus-fastapi-instrumentator = "^6.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
